--- a/StatusR.html
+++ b/StatusR.html
@@ -26,10 +26,9 @@
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
     <div class="content">
-        <small>Welcome to</small>
-        <h1>Mars <br> Migration</h1>
         
-        <a href="StatusR.html" class="Btn">Status Report</a> 
+        <h1>Status <br> Report</h1>
+        
     </div>
 
 <section class="F"></section>
