--- a/Mission.html
+++ b/Mission.html
@@ -21,15 +21,14 @@
                 <li><a href="Mission.html">Mission</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="About.html">About</a></li>
-            </ul>    
+            </ul>     
         </div>
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
     <div class="content">
-        <small>Welcome to</small>
-        <h1>Mars <br> Migration</h1>
         
-        <a href="StatusR.html" class="Btn">Status Report</a> 
+        <h1>Our <br> Mission</h1>
+        
     </div>
 
 <section class="F"></section>
