--- a/StatusR.html
+++ b/StatusR.html
@@ -26,20 +26,8 @@
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
 
-
-    <h3>IN PROGRESS</h3>
-    
-<div class="new">
-
-        <img class="image_jpg" src="images/qt=q_31.jpeg" alt="Image" width="350px" height="250px">
-        <div class="imageoverlay">
-            <div class="imagetitle">April 2022</div>
-            <p class="imagedesc"> I have officially sent my manuscript off to an editor <br> I'm very
-    excited and nervous, this is a huge milestone! <br>
-    I have chosen an editor based in Texas, USA who like me, is a sci-fi and <br>
-    fantasy nerd! Nuff said. I will keep you updated at the next milestone.  
-            </p>
-</div>
+<h1>In Progress</h1>
+  
     
 
 
@@ -90,65 +78,19 @@
 
 }
 
-.h3{
-    color: white;
-    font-size: 40px;
-}
 
 
-.status{
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-}
 
-.new{
-    width: 350px;
-    height: 250px;
-    position: relative;
-    padding: 50px;
+h1{
+text-align: center;
+font-size: 100px;
+padding-top: 100px;
+color: #921e16;
+text-shadow: white;
+transition: 0.5s;
 }
-.image_jpg{
-    display: block;
-    width: 100%;
-}
-
-.imageoverlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(94, 9, 9, 0.7);
-    color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    opacity: 0;
-    transition: 0.5s;
-}
-.imageoverlay >:last-child{
-    transform: translateY(20px);
-    transition: transform 0.5s;
-}
-.imageoverlay >:last-child:hover{
-    transform: translateY(0);
-}
-
-
-.imageoverlay:hover{
-    opacity: 1;
-}
-
-.imagetitle{
-    font-size: 2em ;
-    font-weight: bold;
-    text-align: center;
-}
-.imagedesc{
-    font-size: 15px;
-    margin-top: 10px;
-    text-align: center;
+h1:hover{
+    color: aliceblue;
 }
 
 
