--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-arrow-right-to-bracket" onclick="hideMenu()" style="color:white"></i>
             <ul>
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Mission.html">Mission</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="About.html">About</a></li>
