--- a/test.html
+++ b/test.html
@@ -115,7 +115,7 @@ body{
 }
 .container .card{
     position: relative;
-    width: 600px;
+    width: 650px;
     height: 550px;
     margin: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
@@ -139,6 +139,13 @@ body{
     font-size: 15px;
     color: white;
     z-index: 1;
+}
+.container .card .content p{
+    font-size: 15px;
+    padding: 36px;
+    color: white;
+    font-weight: 800;
+
 }
 
 
@@ -298,6 +305,51 @@ nav .fa-solid{
     font-size: 30px;
     line-height: 30px;
 }
+
+
+
+
+.container .card{
+    position: relative;
+    width: 650px;
+    height: 850px;
+    margin: 20px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+   justify-content: center;
+   align-items: center;
+   border-top: 1px;
+}
+
+.container .card .content{
+    padding: 30px;
+    text-align: center;
+    transition: 0.5s;
+}
+.container .card .content h2{
+    color: white;
+}
+.container .card .content h3{
+    font-size: 15px;
+    color: white;
+    z-index: 1;
+}
+.container .card .content p{
+    font-size: 15px;
+    padding: 36px;
+    color: white;
+    font-weight: 800;
+
+}
+
+
+
+
+
+
+
 nav .fa-solid{
     display: block;
     margin: top;
