--- a/test.html
+++ b/test.html
@@ -83,6 +83,16 @@
         }
 
     </script>
+
+<script type="text/javascript" src="vanilla-tilt.js"></script>
+<script>
+    VanillaTilt.init(document.querySelector(".card"),{
+		max: 25,
+		speed: 400,
+        glare: true,
+        "max-glare": 1,
+	});
+</script>
     
 </body>
 
