--- a/Mission.html
+++ b/Mission.html
@@ -62,13 +62,13 @@
     </div>
 
     <div class="met">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
         
     </div>
 
