--- a/StatusR.html
+++ b/StatusR.html
@@ -36,16 +36,16 @@
 
 
 
-    <div class="met">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        
-    </div>
+<div class="met">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    <img src="Meteor.png.png">
+    
+</div>
 
 <!--------JavaScript for toggle-------->
 
