--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
     </div>
 
     <div class="met">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
         
     </div>
 
@@ -88,7 +88,7 @@
 .header{
         min-height: 100vh;
     width: 100%;
-    background-image: url("images/marsone.jpg");
+    background-image: url("images/yo.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
