--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     </div>
 
     <div class="met">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
-        <img src="rock.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
+        <img src="Meteor.png.png">
         
     </div>
 
@@ -214,7 +214,7 @@ nav .fa-solid{
 }
 .met img:nth-child(2){
     animation-delay: 1s;
-    width: 15px;
+    width: 35px;
 }
 .met img:nth-child(3){
     animation-delay: 3s;
@@ -222,7 +222,7 @@ nav .fa-solid{
 }
 .met img:nth-child(4){
     animation-delay: 4.5s;
-    width: 10px;
+    width: 50px;
 }
 .met img:nth-child(5){
     animation-delay: 3s;
