--- a/test.html
+++ b/test.html
@@ -169,7 +169,7 @@ body{
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url(Images/homepage.jpg);
+    background-image: url(Images/dark.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
