--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 .header{
         min-height: 100vh;
     width: 100%;
-    background-image: url("images/dark.jpg");
+    background-image: url("images/yo.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
