--- a/contact.html
+++ b/contact.html
@@ -86,16 +86,16 @@
 }
 
 .header{
-        min-height: 100vh;
+    min-height: 100vh;
     width: 100%;
-    background-image: url("images/yo.jpg");
+    background-image: url("images/yo.jpg") !important;
     background-position: center;
     background-size: cover;
     position: relative;
        }
-       .hero1{
-        display: none !important;
-       }
+.hero1{
+    display: none !important;
+    }
 .logo{
     width: 70px;
     cursor: pointer;
