--- a/StatusR.html
+++ b/StatusR.html
@@ -26,7 +26,27 @@
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
 
-<h1>In Progress</h1>
+<section class="container">
+    <div class="card">
+        <div class="card-image"></div> 
+        <h2>Title</h2>
+        <p>Text</p>
+    </div>
+    <div class="card">
+        <div class="card-image"></div> 
+        <h2>Title</h2>
+        <p>Text</p>
+    </div>
+    <div class="card">
+        <div class="card-image"></div> 
+        <h2>Title</h2>
+        <p>Text</p>
+    </div>
+
+
+
+
+</section>
   
     
 
