--- a/StatusR.html
+++ b/StatusR.html
@@ -95,10 +95,17 @@
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
-
+box-sizing: border-box;
 }
 
 
+
+.container{
+    display: flex;
+}
+.card{
+    background: white;
+}
 
 
 h1{
