--- a/StatusR.html
+++ b/StatusR.html
@@ -133,7 +133,21 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(9.6px);
 -webkit-backdrop-filter: blur(9.6px);
 border: 1px solid rgba(157, 138, 138, 0.59);
+transition: 1s;
 }
+
+
+.card:hover{
+    background: rgba(108, 49, 49, 0.55);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(9.6px);
+-webkit-backdrop-filter: blur(9.6px);
+border: 1px solid rgba(157, 138, 138, 0.59);
+cursor: pointer;
+}
+
+
 .card-image{
     height: 170px;
     margin-bottom: 15px;
