--- a/Mission.html
+++ b/Mission.html
@@ -126,7 +126,6 @@ body{
 .container .card{
     position: relative;
     width: 650px;
-    height: 550px;
     margin: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -322,7 +321,6 @@ nav .fa-solid{
 .container .card{
     position: relative;
     width: 650px;
-    height: 850px;
     margin: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -380,14 +378,20 @@ small{
 }
 .nav-links{
     position: absolute;
-    background: #f44336;
-    height: 100vh;
+    
+   
     width: 200px;
     top: 0;
     right: -200px;
     text-align: left;
     z-index: 2;
     transition: 1s;
+    background: rgba( 255, 0, 0, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 10px );
+-webkit-backdrop-filter: blur( 10px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 }
 </style>
