--- a/StatusR.html
+++ b/StatusR.html
@@ -364,14 +364,19 @@ nav .fa-solid{
 }
 .nav-links{
     position: absolute;
-    background: #f44336;
-    height: 100vh;
+   
     width: 200px;
     top: 0;
     right: -200px;
     text-align: left;
     z-index: 2;
     transition: 1s;
+    background: rgba( 255, 0, 0, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 10px );
+-webkit-backdrop-filter: blur( 10px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 
