--- a/contact.html
+++ b/contact.html
@@ -350,6 +350,94 @@ transition: color 0.5s;
 
 
 
+@media(max-width: 700px){
+.content h1{
+    font-size: 30px;
+    line-height: 30px;
+}
+
+
+
+
+.container .card{
+    position: relative;
+    width: 650px;
+    
+    margin: 20px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+   justify-content: center;
+   align-items: center;
+   border-top: 1px;
+}
+
+.container .card .content{
+    padding: 30px;
+    text-align: center;
+    transition: 0.5s;
+}
+.container .card .content h2{
+    color: white;
+}
+.container .card .content h3{
+    font-size: 15px;
+    color: white;
+    z-index: 1;
+}
+.container .card .content p{
+    font-size: 15px;
+    padding: 36px;
+    color: white;
+    font-weight: 800;
+
+}
+
+
+
+
+
+
+
+nav .fa-solid{
+    display: block;
+    margin: top;
+    font-size: 22px;
+    cursor: pointer;
+    padding: 10px;
+   
+}
+.nav-links ul {
+    padding: 30px;
+}
+
+small{
+    font-size: 10px;
+}
+.nav-links ul li{
+    display: block;
+}
+.nav-links{
+    position: absolute;
+    
+   
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+    background: rgba( 255, 0, 0, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 10px );
+-webkit-backdrop-filter: blur( 10px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+
+}
 
 }
 
