--- a/StatusR.html
+++ b/StatusR.html
@@ -97,8 +97,9 @@
             navLinks.style.right = "-200px";
         }
 
-    </script>
     
+    </script>
+
 </body>
 
 
@@ -110,7 +111,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
@@ -177,15 +178,20 @@ cursor: pointer;
 
 
 .sample-1{   /*I'd change these to different images and classes when done*/
-    background-image: url(images/update.jpeg);
+ /*   background-image: url(images/update.jpeg);*/
+ background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
 }
 .sample-1{
-    background-image: url(images/update.jpeg);
+     /*   background-image: url(images/update.jpeg);*/
+ background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
 }
 .sample-1{
-    background-image: url(images/update.jpeg);
+     /*   background-image: url(images/update.jpeg);*/
+ background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
 }
-
 .card p{
     padding: 10px;
     
