--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,8 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url("images/yo.jpg") !important;
+    background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
     background-position: center;
     background-size: cover;
     position: relative;
