--- a/StatusR.html
+++ b/StatusR.html
@@ -90,14 +90,25 @@
         var navLinks = document.getElementById("navLinks");
 
         function showMenu(){
-            navLinks.style.right = "0";
+            if (document.getElementById('navLinks').style.display == 'none'){
+                document.getElementById('navLinks').style.display = 'block';
+            } else {
+                document.getElementById('navLinks').style.display = 'none';
+            }
         }
+        document.getElementById('showmenu').addEventListener('click', navLinks);
 
-        function hideMenu(){
+        
+      /*  function hideMenu(){
             navLinks.style.right = "-200px";
         }
 
-    
+var navLinks = document.getElementById("navLinks");
+
+        function hideMenu(){
+            navLinks.style.display = 'none';
+        }
+    */
     </script>
 
 </body>
@@ -373,7 +384,7 @@ nav .fa-solid{
    
     width: 200px;
     top: 0;
-    right: -200px;
+   right: 0px; 
     text-align: left;
     z-index: 2;
     transition: 1s;
