--- a/StatusR.html
+++ b/StatusR.html
@@ -28,7 +28,7 @@
 
 <section class="container">
     <div class="card">
-        <div class="card-image sample-1"></div> 
+        <div class="card-image sample-2"></div> 
         <h2>July 2022</h2>
         <p>I have officially sent my manuscript off to an editor. <br>
 
@@ -176,10 +176,9 @@ cursor: pointer;
 
 
 
-.sample-1{   /*I'd change these to different images and classes when done*/
- /*   background-image: url(images/update.jpeg);*/
- background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
+.sample-2{   /*I'd change these to different images and classes when done*/
+    background-image: url(Images/update.jpeg);
+ 
 }
 .sample-1{
      /*   background-image: url(images/update.jpeg);*/
