--- a/StatusR.html
+++ b/StatusR.html
@@ -181,14 +181,11 @@ cursor: pointer;
  
 }
 .sample-1{
-     /*   background-image: url(images/update.jpeg);*/
- background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
+        background-image: url(Images/update.jpeg);
 }
 .sample-1{
-     /*   background-image: url(images/update.jpeg);*/
- background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
+        background-image: url(Images/update.jpeg);
+
 }
 .card p{
     padding: 10px;
