--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba
     background-position: center;
     background-size: cover;
     position: relative;
+    background-image: url(Images/space.jpg);
        }
 
        h1{
