--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <li><a href="About.html">About</a></li>
             </ul>    
         </div>
-        <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
+        <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(221, 208, 208)"></i>
     </nav>
     
 
@@ -86,12 +86,11 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(115,21,27,1) 36%, rgba(88,14,38,1) 95%);
     background-position: center;
     background-size: cover;
     position: relative;
     background-image: url(Images/space.jpg);
+    overflow: hidden;
        }
 
        h1{
