--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
-    background-image: url(Images/space.jpg);
+    background-image: url(Images/yo.jpg);
     overflow: hidden;
        }
 
