--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <li><a href="About.html">About</a></li>
             </ul>    
         </div>
-        <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(221, 208, 208)"></i>
+        <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(137, 41, 41)"></i>
     </nav>
     
 
@@ -145,8 +145,8 @@ h1{
     height: 80px;
     text-align: center;
     text-decoration: none;
-    color: black;
-    box-shadow: 0 0 20px 10px rgba(111, 45, 45, 0.05);
+    color: rgb(112, 33, 33);
+    box-shadow: 0 0 20px 10px rgba(30, 24, 24, 0.05);
     margin: 0 30px;
     border-radius: 50%;
     position: relative;
