Navbar + Responsive fix

--- a/StatusR.html
+++ b/StatusR.html
@@ -113,7 +113,9 @@
     box-sizing: border-box;
 }
 
-
+.header{
+    overflow: hidden;
+}
 
 .container{
     display: flex; /*this makes them side by side*/
