--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@
     position: relative;
     background-image: url(Images/yo.jpg);
     overflow: hidden;
+    overflow: hidden;
        }
 
        h1{
