--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
-
+    
 }
 
 .header{
@@ -88,6 +88,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    overflow: hidden;
 }
 .logo{
     width: 70px;
