--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 <section class="flex">
     <div class="social-links"><a href="https://www.facebook.com/authorwmbailey/"><i class="fa-brands fa-facebook-f"></i></a></div> 
     <div class="social-links"><a href="https://instagram.com/marsmigration?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram"></i></a></div>
-    <div class="social-links"><a href="https://twitter.com/WayneWestMids?t=7lYINvCla41ImdspUqL50g&s=09"><i class="fa-brands fa-twitter"></i></a></div>
+    <div class="social-links"><a href="https://twitter.com/WayneUKwriting?t=VJcNIybkcPN1xzRArrLaAA&s=09"><i class="fa-brands fa-twitter"></i></a></div>
     <div class="social-links"><a href="https://www.linkedin.com/in/waynebaileyagw"><i class="fa-brands fa-linkedin"></i></a></div>
 
 </section>
