--- a/StatusR.html
+++ b/StatusR.html
@@ -28,7 +28,7 @@
 
 <section class="container">
     <div class="card">
-        <div class="card-image sample-2"></div> 
+        <div class="card-image sample-3"></div> 
         <h2>July 2022</h2>
         <p>I have officially sent my manuscript off to an editor. <br>
 
@@ -38,14 +38,11 @@
             fantasy nerd! Nuff said. I will keep you updated at the next milestone.</p>
     </div>
     <div class="card">
-        <div class="card-image sample-1"></div> 
+        <div class="card-image sample-2"></div> 
         <h2>April 2022</h2>
-        <p>I have officially sent my manuscript off to an editor. <br>
-
-            I'm very excited and nervous, this is a huge milestone. <br>
-            
-            I have chosen an editor based in Texas, USA who like me, is a sci-fi and 
-            fantasy nerd! Nuff said. I will keep you updated at the next milestone.</p>
+        <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
+            Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
+            All that is left after this is formatting and we're there.</p>
     </div>
     <div class="card">
         <div class="card-image sample-1"></div> 
@@ -178,12 +175,12 @@ cursor: pointer;
 
 
 
-.sample-2{   /*I'd change these to different images and classes when done*/
-    background-image: url(Images/update.jpeg);
+.sample-3{   /*I'd change these to different images and classes when done*/
+    background-image: url(Images/July.jpg);
  
 }
-.sample-1{
-        background-image: url(Images/update.jpeg);
+.sample-2{
+        background-image: url(Images/June.jpg);
 }
 .sample-1{
         background-image: url(Images/update.jpeg);
