--- a/StatusR.html
+++ b/StatusR.html
@@ -30,12 +30,8 @@
     <div class="card">
         <div class="card-image sample-3"></div> 
         <h2>July 2022</h2>
-        <p>I have officially sent my manuscript off to an editor. <br>
-
-            I'm very excited and nervous, this is a huge milestone. <br>
-            
-            I have chosen an editor based in Texas, USA who like me, is a sci-fi and 
-            fantasy nerd! Nuff said. I will keep you updated at the next milestone.</p>
+        <p>I have made adjustments in align with the final revisions. <br>
+        I'm proud to say, My next stage will be finally getting round to editing the book cover!!</p>
     </div>
     <div class="card">
         <div class="card-image sample-2"></div> 
