--- a/StatusR.html
+++ b/StatusR.html
@@ -189,7 +189,7 @@ cursor: pointer;
  
 }
 .sample-2{
-        background-image: url(Images/July.jpg);
+        background-image: url(Images/Upp.jpg);
 }
 .sample-1{
         background-image: url(Images/update.jpeg);
