--- a/StatusR.html
+++ b/StatusR.html
@@ -185,7 +185,7 @@ cursor: pointer;
 
 
 .sample-3{   /*I'd change these to different images and classes when done*/
-    background-image: url(Images/June.jpg);
+    background-image: url(Images/uppp.jpg);
  
 }
 .sample-2{
