--- a/StatusR.html
+++ b/StatusR.html
@@ -41,6 +41,13 @@
             All that is left after this is formatting and we're there.</p>
     </div>
     <div class="card">
+        <div class="card-image sample-2"></div> 
+        <h2>April 2022</h2>
+        <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
+            Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
+            All that is left after this is formatting and we're there.</p>
+    </div>
+    <div class="card">
         <div class="card-image sample-3"></div> 
         <h2>July 2022</h2>
         <p>I have made adjustments in align with the final revisions. <br>
