--- a/StatusR.html
+++ b/StatusR.html
@@ -41,11 +41,10 @@
             All that is left after this is formatting and we're there.</p>
     </div>
     <div class="card">
-        <div class="card-image sample-2"></div> 
+        <div class="card-image sample-4"></div> 
         <h2>April 2022</h2>
-        <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
-            Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
-            All that is left after this is formatting and we're there.</p>
+        <p>My next challenge arises! <br> I am now proudly focusing all of 
+        my time designing the first draft of my book cover. <br> This is much harder than I anticipated!</p>
     </div>
     <div class="card">
         <div class="card-image sample-3"></div> 
@@ -200,7 +199,9 @@ cursor: pointer;
 }
 .sample-1{
         background-image: url(Images/update.jpeg);
-
+}
+.sample-4{
+    background-image: url(Images/Cover.jpg);
 }
 .card p{
     padding: 10px;
