--- a/StatusR.html
+++ b/StatusR.html
@@ -28,13 +28,13 @@
 
 <section class="container">
     <div class="card">
-        <div class="card-image sample-3"></div> 
+        <div class="card-image sample-6"></div> 
         <h2>July 2022</h2>
         <p>I have made adjustments in align with the final revisions. <br>
         I'm proud to say, My next stage will be finally getting round to editing the book cover!!</p>
     </div>
     <div class="card">
-        <div class="card-image sample-2"></div> 
+        <div class="card-image sample-5"></div> 
         <h2>April 2022</h2>
         <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
             Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
@@ -201,6 +201,12 @@ cursor: pointer;
         background-image: url(Images/update.jpeg);
 }
 .sample-4{
+    background-image: url(Images/Cover.jpg);
+}
+.sample-5{
+    background-image: url(Images/CoverDone.jpg);
+}
+.sample-6{
     background-image: url(Images/Cover.jpg);
 }
 .card p{
