--- a/StatusR.html
+++ b/StatusR.html
@@ -36,9 +36,9 @@
     <div class="card">
         <div class="card-image sample-5"></div> 
         <h2>April 2022</h2>
-        <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
-            Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
-            All that is left after this is formatting and we're there.</p>
+        <p>The official cover is in my possession. All that time spent 
+            brainstorming, that kept me up some nights, was finally worth it! <br>
+            It looks better than I anticipated.
     </div>
     <div class="card">
         <div class="card-image sample-4"></div> 
