--- a/StatusR.html
+++ b/StatusR.html
@@ -207,7 +207,7 @@ cursor: pointer;
     background-image: url(Images/CoverDone.jpg);
 }
 .sample-6{
-    background-image: url(Images/Cover.jpg);
+    background-image: url(Images/Launch.jpg);
 }
 .card p{
     padding: 10px;
