--- a/StatusR.html
+++ b/StatusR.html
@@ -25,13 +25,14 @@
         </div>
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
-
+december 3 yrs
 <section class="container">
     <div class="card">
         <div class="card-image sample-6"></div> 
         <h2>July 2022</h2>
-        <p>I have made adjustments in align with the final revisions. <br>
-        I'm proud to say, My next stage will be finally getting round to editing the book cover!!</p>
+        <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
+        I'm aiming much higher than this now, thinking about how I can eventually
+    see my books in local stores!</p>
     </div>
     <div class="card">
         <div class="card-image sample-5"></div> 
@@ -159,6 +160,7 @@ backdrop-filter: blur(9.6px);
 -webkit-backdrop-filter: blur(9.6px);
 border: 1px solid rgba(157, 138, 138, 0.59);
 cursor: pointer;
+color: white;
 }
 
 
