--- a/index.html
+++ b/index.html
@@ -206,10 +206,15 @@
        z-index: 2;
 }
 
+small{
+    padding: 20px;
+    font-size: 25px;
+}
 .content h1{
-    font-size: 80px;
+    font-size: 60px;
     margin: 10px 0 30px;
-    line-height: 80px;
+    line-height: 60px;
+    padding: 30px;
 }
 
 nav{
