--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </a>
 </h1>
         
-        <a href="" class="Btn">Status Report</a> 
+        <a href="StatusR.html" class="Btn">Status Report</a> 
        
     </div>
 
