--- a/StatusR.html
+++ b/StatusR.html
@@ -29,15 +29,17 @@ december 3 yrs
 <section class="container">
     <div class="card">
         <div class="card-image sample-6"></div> 
-        <h2>July 2022</h2>
+        <h2>Mid Aug 2022</h2>
         <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
         I'm aiming much higher than this now, thinking about how I can eventually
     see my books in local stores!</p>
     </div>
     <div class="card">
         <div class="card-image sample-5"></div> 
-        <h2>April 2022</h2>
-        <p>The official cover is in my possession. All that time spent 
+        <h2>Late July 2022</h2>
+        <p>having agreed a style and sending basic sketches to the cover artist, we have come up with the finished article. I have also purchased and paid for my
+             two x ISBN numbers, one for the ebook and one for the paperback. 
+            The official cover is in my possession. All that time spent 
             brainstorming, that kept me up some nights, was finally worth it! <br>
             It looks better than I anticipated.
     </div>
