--- a/StatusR.html
+++ b/StatusR.html
@@ -37,7 +37,7 @@ december 3 yrs
     <div class="card">
         <div class="card-image sample-5"></div> 
         <h2>Late July 2022</h2>
-        <p>having agreed a style and sending basic sketches to the cover artist, we have come up with the finished article. I have also purchased and paid for my
+        <p>Having agreed a style and sending basic sketches to the cover artist, we have come up with the finished article. I have also purchased and paid for my
              two x ISBN numbers, one for the ebook and one for the paperback. 
             The official cover is in my possession. All that time spent 
             brainstorming, that kept me up some nights, was finally worth it! <br>
