--- a/StatusR.html
+++ b/StatusR.html
@@ -45,9 +45,10 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-4"></div> 
-        <h2>April 2022</h2>
+        <h2>July 2022</h2>
         <p>My next challenge arises! <br> I am now proudly focusing all of 
-        my time designing the first draft of my book cover. <br> This is much harder than I anticipated!</p>
+        my time designing the first draft of my book cover. <br> This is much harder than I anticipated, but 
+        the theme I am going for is vintage science fiction style. </p>
     </div>
     <div class="card">
         <div class="card-image sample-3"></div> 
