--- a/StatusR.html
+++ b/StatusR.html
@@ -52,20 +52,20 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-3"></div> 
-        <h2>July 2022</h2>
+        <h2>Late July 2022</h2>
         <p>I have made adjustments in align with the final revisions. <br>
         I'm proud to say, My next stage will be finally getting round to editing the book cover!!</p>
     </div>
     <div class="card">
         <div class="card-image sample-2"></div> 
-        <h2>April 2022</h2>
+        <h2>Late June 2022</h2>
         <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
             Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
             All that is left after this is formatting and we're there.</p>
     </div>
     <div class="card">
         <div class="card-image sample-1"></div> 
-        <h2>February 2022</h2>
+        <h2>Early Feb 2022</h2>
         <p>I have officially sent my manuscript off to an editor. <br>
 
             I'm very excited and nervous, this is a huge milestone. <br>
