--- a/StatusR.html
+++ b/StatusR.html
@@ -70,8 +70,8 @@ december 3 yrs
 
             I'm very excited and nervous, this is a huge milestone. <br>
             
-            I have chosen an editor based in Texas, USA who like me, is a sci-fi and 
-            fantasy nerd! Nuff said. I will keep you updated at the next milestone.</p>
+            I have also chosen my cover artist, found online with an impressive website. We have agreed on a price for his services. All we need to do now is to place
+             an order, and start to think which style would suit my project.</p>
     </div>
 
 
