--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 </h1>
         
         <a href="StatusR.html" class="Btn">Status Report</a> 
+        <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
        
     </div>
 
