--- a/Purchase.html
+++ b/Purchase.html
@@ -28,7 +28,7 @@
 december 3 yrs
 
 
-<h1>After 3 years of dedication</h1>
+<h1>After 3 years of dedication...</h1>
 <h2>I can finally say, you will be able to order my book very soon!</h2>
   
     
@@ -110,6 +110,7 @@ december 3 yrs
 
 h1, h2{
     text-align: center;
+    color: white;
     font-size: 30px;
 }
 
