--- a/Purchase.html
+++ b/Purchase.html
@@ -112,9 +112,10 @@ h1, h2{
     text-align: center;
     color: white;
     font-size: 30px;
+    padding-top: 50px;
 }
 h1{
-    padding: 30px;
+    padding: 50px;
 }
 
 
