--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
   </a>
 </h1>
         
-        <a href="StatusR.html" class="Btn">Status Report</a> 
+        <a href="StatusR.html" class="Btn">Status Report</a>  <br>
+        <div class="sep">
+
+        </div>
         <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
        
     </div>
@@ -190,7 +193,6 @@
     outline: none;
     cursor: pointer;
     text-decoration: none;
-    padding: 10px 20px;
     position: relative;
 }
 .Btn:hover{
@@ -206,6 +208,10 @@
        left: 8%;
        transform: translateY(-50%) ;
        z-index: 2;
+}
+
+.sep{
+    height: 25px;
 }
 
 small{
