--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
   </a>
 </h1>
         
-        <a href="StatusR.html" class="Btn">Status Report</a>  <br>
-        <div class="sep">
-
-        </div>
+        <a href="StatusR.html" class="Btn">Status Report</a> 
         <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
        
     </div>
@@ -210,9 +207,7 @@
        z-index: 2;
 }
 
-.sep{
-    height: 25px;
-}
+
 
 small{
     padding: 20px;
