--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     cursor: pointer;
     text-decoration: none;
     position: relative;
+    display: inline-flex;
 }
 .Btn:hover{
     border: 1px solid rgb(255, 1, 1);
