--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </a>
 </h1>
         
-        <a href="StatusR.html" class="Btn">Status Report</a> 
+        <a href="StatusR.html" class="Btn">My Journey</a> 
         <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
         
     </div>
