--- a/StatusR.html
+++ b/StatusR.html
@@ -28,6 +28,13 @@
 december 3 yrs
 <section class="container">
     <div class="card">
+        <div class="card-image sample-7"></div> 
+        <h2>Mid Aug 2022</h2>
+        <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
+        I'm aiming much higher than this now, thinking about how I can eventually
+    see my books in local stores!</p>
+    </div>
+    <div class="card">
         <div class="card-image sample-6"></div> 
         <h2>Mid Aug 2022</h2>
         <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
@@ -210,6 +217,9 @@ december 3 yrs
 }
 .sample-6{
     background-image: url(Images/Launch.jpg);
+}
+.sample-7{
+    background-image: url(Images/April2022.png);
 }
 .card p{
     padding: 10px;
