--- a/StatusR.html
+++ b/StatusR.html
@@ -29,10 +29,11 @@ december 3 yrs
 <section class="container">
     <div class="card">
         <div class="card-image sample-7"></div> 
-        <h2>Mid Aug 2022</h2>
-        <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
-        I'm aiming much higher than this now, thinking about how I can eventually
-    see my books in local stores!</p>
+        <h2>December 2019</h2>
+        <p>It was around this time that I started to get the initial random ideas popping into my head. I just started to get thoughts pass by one after the other - spheres, UFO's, black holes, the end of our Sun. So I thought to myself that I should start writing all of these thoughts down and maybe even compiling some sort of a story. <br>
+            I had seen a UFO when I was younger, and so did my dad during his younger days. That, I think coupled with being a massive science fiction geek anyway, growing up with all of the amazing 80's films that we had, was likely the inspiration that lit the fire. The ideas just seemed to surge forward easily, coming thick and fast once I decided to start writing.  
+            I started to draft out the major plot points and officially draft one was under way.
+            </p>
     </div>
     <div class="card">
         <div class="card-image sample-6"></div> 
