--- a/StatusR.html
+++ b/StatusR.html
@@ -220,7 +220,7 @@ december 3 yrs
     background-image: url(Images/Launch.jpg);
 }
 .sample-7{
-    background-image: url(Images/April2022.png);
+    background-image: url(Images/Dec2019.jpg);
 }
 .card p{
     padding: 10px;
