--- a/StatusR.html
+++ b/StatusR.html
@@ -37,10 +37,13 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-6"></div> 
-        <h2>Mid Aug 2022</h2>
-        <p>I have officially set the estimated launch date, after a 3 year long journey, with what started as just a creative hobby, has turned into so much more <br>
-        I'm aiming much higher than this now, thinking about how I can eventually
-    see my books in local stores!</p>
+        <h2>December 2020</h2>
+        <p>One year later - December 2020, after having more time than expected to sit and write, thanks to Covid-19! I now had a completed draft one. Looking back - it was bloody awful. I had never written down a story before, and it showed. 
+            I searched for beta readers that I could send it to, as well as using family and friends to read it for me. I received some blunt, but very constructive advice.  
+            It was clear that my work was nowhere near finished. Before cracking on with it again, I started to watch Youtube videos about writing, and I now read books every single day, to try to improve my writing. I realised that I had so much to learn, there were so many things that I hadn’t even considered the first time around. Things like how there are certain ways to use people's viewpoints in writing, narrative structures, certain faux pa's when starting or ending chapters. That I needed detail, but not too much so as to bore the reader - "info dumping". 
+            I know now that really I should have looked into creative writing courses. I felt bad for not doing so, but I was already so deep into it.
+            It was back to the drawing board - or keyboard.  
+            </p>
     </div>
     <div class="card">
         <div class="card-image sample-5"></div> 
@@ -217,7 +220,7 @@ december 3 yrs
     background-image: url(Images/CoverDone.jpg);
 }
 .sample-6{
-    background-image: url(Images/Launch.jpg);
+    background-image: url(Images/Dec2020.png);
 }
 .sample-7{
     background-image: url(Images/Dec2019.jpg);
