--- a/StatusR.html
+++ b/StatusR.html
@@ -47,12 +47,10 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-5"></div> 
-        <h2>Late July 2022</h2>
-        <p>Having agreed a style and sending basic sketches to the cover artist, we have come up with the finished article. I have also purchased and paid for my
-             two x ISBN numbers, one for the ebook and one for the paperback. 
-            The official cover is in my possession. All that time spent 
-            brainstorming, that kept me up some nights, was finally worth it! <br>
-            It looks better than I anticipated.
+        <h2>January 2022</h2>
+        <p>A little over a year later - fast forward to January 2022. I had now completely re-written the story. It was needed, it was hard work, but I was honest enough with myself to admit that it wasn't anywhere near the standard that it should be. 
+            A lot of polishing, expanding, and generally better writing - hopefully, made it jump from 50k words to 100k words. I now felt like I had a book on my hands, although there was still a way to go.
+            
     </div>
     <div class="card">
         <div class="card-image sample-3"></div> 
@@ -217,7 +215,7 @@ december 3 yrs
     background-image: url(Images/Cover.jpg);
 }
 .sample-5{
-    background-image: url(Images/CoverDone.jpg);
+    background-image: url(Images/Jan2022.png);
 }
 .sample-6{
     background-image: url(Images/Dec2020.png);
